--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
         <title>Random Fruit </title>
     </head>
     <body>
-        <h1>This web application generates Random Fruit!</h1>  
+        <h1>This web application generates a Random Fruit!</h1>  
         <h3>Random Fruit: {{ fruit }}</h3>
         <h4><i>Refresh the page for more random fruit.</i></h4>
     </body>
